<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.topstorydetail.TopStoryDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/dimen_24"
                android:layout_height="@dimen/dimen_24"
                android:layout_marginStart="@dimen/dimen_16"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/tvAppBarTitle"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/story_detail"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_16">

            <ImageView
                android:id="@+id/ivStar"
                android:layout_width="@dimen/dimen_36"
                android:layout_height="@dimen/dimen_36"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/ic_star_border_gold_24dp"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:id="@+id/tvTitleStory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/ex_story_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/ivStar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvByStory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="By Anggit Prayago"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/dimen_7"
                style="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintTop_toBottomOf="@id/tvTitleStory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvDateStory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="dd/mm/yyyy"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/dimen_7"
                style="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintTop_toBottomOf="@id/tvByStory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvScoreStory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="dd/mm/yyyy"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/dimen_7"
                style="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintTop_toBottomOf="@id/tvDateStory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvDescStoryHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintTop_toBottomOf="@id/tvScoreStory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/dimen_24"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/tvDescStoryBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintTop_toBottomOf="@id/tvDescStoryHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/dimen_7"
                android:text="@string/description_body"/>

            <TextView
                android:id="@+id/tvCommentHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24"
                android:text="@string/comment_header"
                style="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintTop_toBottomOf="@id/tvDescStoryBody"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ProgressBar
                android:id="@+id/progressBarComment"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/tvCommentHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="UnusedAttribute" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvComment"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dimen_7"
                app:layout_constraintTop_toBottomOf="@id/tvCommentHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>